--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,15 @@ android {
 
     defaultConfig {
         applicationId "com.example.study_tdd"
-        minSdkVersion 16
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    buildFeatures{
+        dataBinding = true
     }
 
     buildTypes {
@@ -22,6 +25,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
 }
 
 dependencies {
