--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,15 @@ dependencies {
 
     //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    //mockito
+    androidTestImplementation 'org.mockito:mockito-android:3.3.3'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    testImplementation 'org.mockito:mockito-all:1.10.19'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.mockito:mockito-inline:3.3.3'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'androidx.test:core:1.3.0'
 }
 
 dependencies {
